feat(phase): add base components
