# server/src/routes/phases/types.ts
@@ -1,0 +1,12 @@
+export interface Phase {
+  sessionId: string;
+  phaseNo: number;
+  status: "open" | "closed";
+  startTime: Date;
+  clearingTime: Date;
+  planningTime: Date;
+  bidsAllowed: boolean;
+  clearingAvailable: boolean;
+  planningsAllowed: boolean;
+  resultsAvailable: boolean;
+}
